<resources>
    <string name="app_name">Shotping</string>
    <!-- Strings related to login -->
    <string name="facebook_app_id" translatable="false">480880839107613</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb480880839107613</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Correo o usuario</string>
    <string name="login">Acceder</string>
    <string name="password">Contraseña</string>
    <string name="LoginNow">Iniciar sesión</string>
    <string name="signUp">Registrarse</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="cancel_login">Acceso cancelado</string>
    <string name="error_login">Ocurrió un error</string>
    <string name="options">O</string>
    <string name="Registrarse">Registrarse</string>
    <string name="email_register">Correo</string>
    <string name="name_register_form">Nombre completo</string>
    <string name="username_register_form">Nombre de usuario</string>
    <string name="password_confirmation_register">Confirmar contraseña</string>
    <string name="input_error_name">El campo del nombre está vacío</string>
    <string name="input_error_email">El campo del correo está vacío</string>
    <string name="input_error_email_invalid">El dato introducido no es un correo electrónico</string>
    <string name="input_error_password">El campo de la contraseña está vacío</string>
    <string name="input_error_password_length">La contraseña debe contener 6 o más caracteres</string>
    <string name="input_error_username">El campo del nombre de usuario está vacío</string>
    <string name="registration_failure">El registro no se pudo completar</string>
    <string name="input_error_confirmPassword">El campo de confirmar la contraseña está vacío</string>
    <string name="input_error_comparison">Las contraseñas no coinciden</string>
    <string name="registration_success">El usuario fue registrado</string>
</resources>
