<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center_horizontal"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">




           <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp">

               <ImageView
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:adjustViewBounds="true"
                   android:scaleType="fitCenter"
                   android:src="@drawable/logo"
                   android:id="@+id/imgView_logo"
                   android:layout_centerHorizontal="true"/>

               <RelativeLayout
                   android:layout_below="@+id/imgView_logo"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/rellayl"
                   android:visibility="gone">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/login"
                       android:textSize="30sp"
                       android:textColor="@color/white"
                       android:fontFamily="sans-serif-medium"
                       android:layout_marginTop="20dp"
                       android:id="@+id/tv_login"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_below="@+id/tv_login"
                       android:id="@+id/linlay"
                       android:layout_marginTop="20dp">

                       <LinearLayout

                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           >

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/username"
                               android:textAllCaps="true"
                               android:textColor="@color/white"
                               android:textSize="15sp"
                               android:fontFamily="sans-serif-medium"/>

                           <EditText
                               android:layout_width="match_parent"
                               android:layout_height="40dp"
                               android:background="@drawable/et_bg"
                               android:textSize="15sp"
                               android:textColor="@color/white"
                               android:paddingLeft="15dp"
                               android:paddingRight="15dp"
                               android:inputType="textEmailAddress"
                               android:layout_marginTop="5dp"
                               android:id="@+id/email"/>



                       </LinearLayout>

                       <LinearLayout

                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_marginTop="20dp"
                           >

                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/password"
                               android:textAllCaps="true"
                               android:textColor="@color/white"
                               android:textSize="15sp"
                               android:fontFamily="sans-serif-medium"/>

                           <EditText
                               android:layout_width="match_parent"
                               android:layout_height="40dp"
                               android:background="@drawable/et_bg"
                               android:textSize="15sp"
                               android:textColor="@color/white"
                               android:paddingLeft="15dp"
                               android:paddingRight="15dp"
                               android:layout_marginTop="5dp"
                               android:id="@+id/password"
                               android:inputType="textPassword"/>



                       </LinearLayout>




                   </LinearLayout>

                   <com.facebook.login.widget.LoginButton
                       android:id="@+id/login_button"
                       android:layout_width="wrap_content"
                       android:layout_height="40dp"
                       android:layout_below="@+id/email_sign_in_button"
                       android:layout_centerHorizontal="true"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="40dp"
                       android:layout_marginBottom="75dp"/>

                   <ProgressBar
                       android:id="@+id/login_progress"
                       style="?android:attr/progressBarStyleLarge"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_below="@+id/login_button"
                       android:layout_centerHorizontal="true"
                       android:layout_marginTop="30dp"
                       android:layout_marginBottom="8dp"
                       android:visibility="gone" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/white"
                       android:layout_below="@id/email_sign_in_button"
                       android:layout_centerHorizontal="true"
                       android:layout_marginTop="13dp"
                       android:layout_marginBottom="15dp"
                       android:fontFamily="sans-serif-medium"
                       android:text="@string/options" />

                   <Button
                       android:layout_width="wrap_content"
                       android:layout_height="40dp"
                       android:layout_below="@+id/linlay"
                       android:layout_marginTop="30dp"
                       android:background="@drawable/animation_login_btn"
                       android:fontFamily="sans-serif-medium"
                       android:text="@string/LoginNow"
                       android:textColor="@drawable/txt_color"
                       android:textAllCaps="false"
                       android:paddingLeft="70dp"
                       android:paddingRight="70dp"
                       android:layout_centerHorizontal="true"
                       android:textSize="16sp"
                       android:id="@+id/email_sign_in_button"/>






               </RelativeLayout>


        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="1dp"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/animation_register_btn"
            android:fontFamily="sans-serif"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@drawable/txt_color" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/animation_register_btn"
            android:fontFamily="sans-serif"
            android:text="@string/forgotPassword"
            android:textAllCaps="true"
            android:textColor="@drawable/txt_color" />


    </RelativeLayout>



</RelativeLayout>