<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center_horizontal"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rellayl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="0dp"
            android:id="@+id/tv_register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_register"
            android:id="@+id/linlay"
            android:layout_marginTop="20dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_register"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="5dp"
                    android:id="@+id/email"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_register_form"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/name_register"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_register_form"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/username_register"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:inputType="textFilter"/>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/password_register"
                    android:inputType="textPassword"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_confirmation_register"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif-medium"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:id="@+id/password_confirmation"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/linlay"
            android:layout_marginTop="20dp"
            android:background="@drawable/animation_login_btn"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Registrarse"
            android:textColor="@drawable/txt_color"
            android:textAllCaps="false"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:id="@+id/register_button"/>

        <ProgressBar
            android:id="@+id/login_progress_register"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_button"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />


    </RelativeLayout>

</RelativeLayout>